# Cinema-microservice

./: .dockerignore  CMakeLists.txt  DOCKER_TESTING_GUIDE.md  Dockerfile.client  Dockerfile.server  Doxyfile  LICENSE  README.md  REMOTE_TESTING_GUIDE.md  conanfile.txt  debug_test.cpp  docker-compose.deploy.yml  docker-compose.yml  documentation_summary.md  generate-docs.sh  generate_docs.sh  main.cpp  mainpage.dox  mainpage_enhancement_summary.md  quick-deploy.sh  quick_deploy.sh  start-docker.sh  start_docker.sh  test-remote.sh  test_docker.sh  test_remote.sh  view-docs.sh  view_docs.sh
client/: CMakeLists.txt  main.cpp
client/lib/: CinemaUI.cpp  CinemaUI.hpp  cinema_Client.cpp  cinema_Client.hpp  websocket_client.cpp  websocket_client.hpp
docs/html/: CinemaUI_8cpp.html  CinemaUI_8cpp__incl.map  CinemaUI_8cpp__incl.md5  CinemaUI_8cpp_source.html  CinemaUI_8hpp.html  CinemaUI_8hpp__dep__incl.map  CinemaUI_8hpp__dep__incl.md5  CinemaUI_8hpp__incl.map  CinemaUI_8hpp__incl.md5  CinemaUI_8hpp_source.html  README_8md.html  annotated.html  cinema_8cpp.html  cinema_8cpp__incl.map  cinema_8cpp__incl.md5  cinema_8cpp_source.html  cinema_8hpp.html  cinema_8hpp__dep__incl.map  cinema_8hpp__dep__incl.md5  cinema_8hpp__incl.map  cinema_8hpp__incl.md5  cinema_8hpp_source.html  cinema__Client_8cpp.html  cinema__Client_8cpp__incl.map  cinema__Client_8cpp__incl.md5  cinema__Client_8cpp_source.html  cinema__Client_8hpp.html  cinema__Client_8hpp__dep__incl.map  cinema__Client_8hpp__dep__incl.md5  cinema__Client_8hpp__incl.map  cinema__Client_8hpp__incl.md5  cinema__Client_8hpp_source.html  classBookingService-members.html  classBookingService.html  classCinemaClient-members.html  classCinemaClient.html  classCinemaService-members.html  classCinemaService.html  classCinemaUI-members.html  classCinemaUI.html  (+90 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+27 more)
docs/latex/: CinemaUI_8cpp.tex  CinemaUI_8cpp__incl.md5  CinemaUI_8cpp_source.tex  CinemaUI_8hpp.tex  CinemaUI_8hpp__dep__incl.md5  CinemaUI_8hpp__incl.md5  CinemaUI_8hpp_source.tex  annotated.tex  cinema_8cpp.tex  cinema_8cpp__incl.md5  cinema_8cpp_source.tex  cinema_8hpp.tex  cinema_8hpp__dep__incl.md5  cinema_8hpp__incl.md5  cinema_8hpp_source.tex  cinema__Client_8cpp.tex  cinema__Client_8cpp__incl.md5  cinema__Client_8cpp_source.tex  cinema__Client_8hpp.tex  cinema__Client_8hpp__dep__incl.md5  cinema__Client_8hpp__incl.md5  cinema__Client_8hpp_source.tex  classBookingService.tex  classCinemaClient.tex  classCinemaService.tex  classCinemaUI.tex  classMessageHandler.tex  classShows.tex  classWebSocketServer.tex  classWebSocketSession.tex  classWebSocketSession__coll__graph.md5  client_2main_8cpp.tex  client_2main_8cpp__incl.md5  client_2main_8cpp_source.tex  dir_00d910b2a486164e1f2e533045ca4778.tex  dir_00d910b2a486164e1f2e533045ca4778_dep.md5  dir_41e1742e44e2de38b3bc91f993fed282.tex  dir_41e1742e44e2de38b3bc91f993fed282_dep.md5  dir_c820a03d7ce2287b7e602f7703757381.tex  dir_db3a54907829b36871118d03417739cd.tex  (+27 more)
server/: main.cpp
server/lib/: cinema.cpp  cinema.hpp  websocket_server.cpp  websocket_server.hpp
src/: cinema.cpp  cinema.hpp  main.cpp  websocket_server.cpp  websocket_server.hpp
tests/: CMakeLists.txt  simple_test.cpp  simple_test.hpp  test_booking_service.cpp  test_cinema_service.cpp  test_main.cpp  test_shows.cpp
